fix: datepicker mobile device keyboard overflow

--- a/packages/front/src/styles/global.module.css
+++ b/packages/front/src/styles/global.module.css
@@ -60,14 +60,20 @@
 
   html {
     height: -webkit-fill-available;
+    font-family: Gilroy, sans-serif;
+    font-size: 16px;
+  }
+
+  @media all and (max-width: 425px) {
+    html {
+      font-size: 14px;
+    }
   }
 
   body {
     padding: 0;
     margin: 0;
     color: var(--white);
-    font-family: Gilroy, sans-serif;
-    font-size: 16px;
     line-height: 18px;
     min-width: 320px;
     min-height: 100vh;
